--- a/demo/index4.html
+++ b/demo/index4.html
@@ -2,29 +2,44 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>最基本的写法</title>
+    <title>属性声明</title>
     <script type="text/javascript" src="../dist/angular2.beta.stack.min.js"></script>
 </head>
 <body>
 	<ez-app></ez-app>
     <script type="text/typescript">
-    // 1 导入组件
-    // 2 定义组件
-    // 3 定义一个渲染对象
-    // 4 启动组件进行渲染
-    // 5 使用自定义的dom节点   一定要放在script 标签外  body内
+    import {Component} from "angular2/core";
+    import {bootstrap} from "angular2/platform/browser";
 
+    //定义一个带有属性的组件
+    @Component({
+        selector:"ez-card",
+        properties:["name","age"],
+        styleUrls:["template/cssTemplate.css"],
+        template:`
+            <div class="ez-card">My name is{{name}}</div>
+            <div class="ez-card">My age is {{age}}</div>
+        `
+    })
+        //定义一个类并赋值
+        class EzCard{
+        constructor(){
+            this.name="xiaomo";
+            this.age=23;
+        }
+    }
 
-    	import {Component} from "angular2/core";
-        import {bootstrap} from "angular2/platform/browser";
+    //根组件，用于渲染页面属性
+    @Component({
+        selector:"ez-app",
+        directives:[EzCard],
+        template:`
+            <div><ez-card></ez-card></div>
+        `
+    })
+    class EzApp{}
 
-        @Component({
-			selector:"ez-app",
-        	template : `<h1>Hello,Angular2</h1>`
-        })
-        class EzApp{}
-
-        bootstrap(EzApp);
+    bootstrap(EzApp);
     </script>
 </body>
 </html>
