--- a/demo/index5.html
+++ b/demo/index5.html
@@ -2,29 +2,59 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>最基本的写法</title>
+    <title>事件 EventEmitter</title>
     <script type="text/javascript" src="../dist/angular2.beta.stack.min.js"></script>
 </head>
 <body>
 	<ez-app></ez-app>
     <script type="text/typescript">
-    // 1 导入组件
-    // 2 定义组件
-    // 3 定义一个渲染对象
-    // 4 启动组件进行渲染
-    // 5 使用自定义的dom节点   一定要放在script 标签外  body内
+	import {Component,EventEmitter} from "angular2/core";
+	import {bootstrap} from "angular2/platform/browser";
 
+    //定义一个事件
+    @Component({
+    	selector:"ez-card",
+    	//value 是一个数组类型
+    	events:["change"],
+    	template :`
+    	<div class="ez-card">
+    	My name is <b>{{name}}</b>, 
+			I am from <b>{{country}}</b>.
+    	</div>
+    	`
+    })
+    //调用者  EzApp组件的模板中，可以直接使用小括号语法挂接事件监听函数：
+    //： class后面没有小括号 跟java的类差不多
+    class EzCard{
+    	constructor(){
+    		this.name = "xiaomo";
+    		this.country = "china";
+    		this.change = new EventEmitter();
+    		setTimeout(()=>this.change.next({
+    			src:"EzCard",
+    			desc:"模拟事件"
+    		}),1000);
+    	}
+    }
 
-    	import {Component} from "angular2/core";
-        import {bootstrap} from "angular2/platform/browser";
-
-        @Component({
-			selector:"ez-app",
-        	template : `<h1>Hello,Angular2</h1>`
-        })
-        class EzApp{}
-
-        bootstrap(EzApp);
+    //根组件：调用ez-card组件
+    @Component({
+    	selector:"ez-app",
+    	directives:[EzCard],
+    	template:`<ez-card (change)="onChange($event)"></ez-card>
+    	<pre>{{evtStr}}</pre>
+    	`
+    })
+    class EzApp{
+    	constructor(){
+    		this.eveStr
+    	}
+    	onChange(evt){
+    		console.log("sth.occured");
+    		this.evtStr= JSON.stringify(evt,null,"\t");
+    	}
+    }
+    bootstrap(EzApp);
     </script>
 </body>
 </html>
