--- a/demo/index7.html
+++ b/demo/index7.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>最基本的写法</title>
+    <title>模型model 赋值</title>
     <script type="text/javascript" src="../dist/angular2.beta.stack.min.js"></script>
 </head>
 <body>
@@ -13,18 +13,25 @@
     // 3 定义一个渲染对象
     // 4 启动组件进行渲染
     // 5 使用自定义的dom节点   一定要放在script 标签外  body内
+    import {Component} from "angular2/core";
+    import {bootstrap} from "angular2/platform/browser"
 
+    @Component({
+        selector:"ez-app",
+        templateUrl:"template/modelVM.html",
+        styleUrls:["template/cssTemplate.css"]
+    })
 
-    	import {Component} from "angular2/core";
-        import {bootstrap} from "angular2/platform/browser";
+    class EzApp{
+        constructor(){
+            this.title="这是小莫的测试";
+            this.date="2015年07月11日 15:32:35";
+            this.source="from xiaomo";
+            this.content="我在学习angular2";
+        }
+    }
+    bootstrap(EzApp);
 
-        @Component({
-			selector:"ez-app",
-        	template : `<h1>Hello,Angular2</h1>`
-        })
-        class EzApp{}
-
-        bootstrap(EzApp);
     </script>
 </body>
 </html>
