--- a/demo/index8.html
+++ b/demo/index8.html
@@ -1,11 +1,13 @@
-index.html<!doctype html>
+<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>最基本的写法</title>
+    <title>属性绑定</title>
     <script type="text/javascript" src="../dist/angular2.beta.stack.min.js"></script>
 </head>
 <body>
+[property] - 属性绑定<br/>
+在模板中，也可以使用一对中括号将HTML元素或组件的属性绑定到组件模型的某个表达式， 当表达式的值变化时，对应的DOM对象将自动得到更新：
 	<ez-app></ez-app>
     <script type="text/typescript">
     // 1 导入组件
@@ -13,18 +15,22 @@ index.html<!doctype html>
     // 3 定义一个渲染对象
     // 4 启动组件进行渲染
     // 5 使用自定义的dom节点   一定要放在script 标签外  body内
+    import {Component} from "angular2/core";
+    import {bootstrap} from "angular2/platform/browser"
 
+    @Component({
+        selector:"ez-app",
+        templateUrl:"template/htmlTemplate.html",
+        styleUrls:["template/cssTemplate.css"],
+    })
 
-    	import {Component} from "angular2/core";
-        import {bootstrap} from "angular2/platform/browser";
+    class EzApp{
+        constructor(){
+            this.color="red";
+        }
+    }
+    bootstrap(EzApp);
 
-        @Component({
-			selector:"ez-app",
-        	template : `<h1>Hello,Angular2</h1>`
-        })
-        class EzApp{}
-
-        bootstrap(EzApp);
     </script>
 </body>
 </html>
