--- a/demo/index9.html
+++ b/demo/index9.html
@@ -24,7 +24,7 @@
             selector:"ez-app",
             template:`
                 <h1>Your turn!! <b>{{name}}</b></h1>
-                <button (click)="randomName()" class="btn btn-default">start</button>
+                <button (click)="randomName()" class="btn btn-info">start</button>
             `
         })
 
