--- a/demo/index10.html
+++ b/demo/index10.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>最基本的写法</title>
+        <title>定义变量 # 或者var- </title>
     <script type="text/javascript" src="../dist/angular2.beta.stack.min.js"></script>
 </head>
 <body>
@@ -14,13 +14,20 @@
     // 4 启动组件进行渲染
     // 5 使用自定义的dom节点   一定要放在script 标签外  body内
 
-
-    	import {Component} from "angular2/core";
+    //这一节的坑  (click)= 这里的内容 外面用双引 内层用单引
+        import {Component} from "angular2/core";
         import {bootstrap} from "angular2/platform/browser";
 
         @Component({
-			selector:"ez-app",
-        	template : `<h1>Hello,Angular2</h1>`
+            selector:"ez-app",
+            template:`
+                <h1>
+                I choose
+                <b #v_who>who?</b>
+                </h1>
+                <button (click)="v_who.textContent='xiaomo'">xiaomo</button>
+                <button (click)="v_who.textContent='xiaoqiang'">xiaoqiang</button>
+            `
         })
         class EzApp{}
 
