--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -1,6 +1,24 @@
 <div>
-    1.基本组件
-    <basic></basic>
-    2. 基本表单
-    <basic-form></basic-form>
+    <table class="table table-bordered table-striped table-hover">
+        <thead>
+        <tr>
+            <th>序号</th>
+            <th>组件</th>
+            <th>效果</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>基本组件</td>
+            <td><basic></basic></td>
+        </tr>
+       <tr>
+           <th scope="row">2</th>
+           <td>基本表单</td>
+           <td><basic-form></basic-form></td>
+       </tr>
+        </tbody>
+    </table>
+
 </div>
