--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
     <link rel="icon" href="images/favicon.ico"/>
 
     {% for (var css in o.htmlWebpackPlugin.files.css) { %}
-    <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
+    <link href=".{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
     {% } %}
 </head>
 <body>
 
-<div class="ui main text container">
-    <forms-demo-app></forms-demo-app>
+<div class="container">
+    <my-app></my-app>
 </div>
 
 <script src="common.js"></script>
