--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -11,13 +11,17 @@
         <tr>
             <th scope="row">1</th>
             <td>基本组件</td>
-            <td><basic></basic></td>
+            <td>
+                <basic></basic>
+            </td>
         </tr>
-       <tr>
-           <th scope="row">2</th>
-           <td>基本表单</td>
-           <td><basic-form></basic-form></td>
-       </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>基本表单</td>
+            <td>
+                <basic-form></basic-form>
+            </td>
+        </tr>
         </tbody>
     </table>
 
