--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -22,6 +22,13 @@
                 <basic-form></basic-form>
             </td>
         </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>循环</td>
+            <td>
+                <ng-for></ng-for>
+            </td>
+        </tr>
         </tbody>
     </table>
 
