--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Angular 2 Demo App</title>
     <link rel="icon" href="images/favicon.ico"/>
-
+    <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/css/bootstrap.css" rel="stylesheet">
     {% for (var css in o.htmlWebpackPlugin.files.css) { %}
     <link href=".{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
     {% } %}
