--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -29,6 +29,13 @@
                 <ng-for></ng-for>
             </td>
         </tr>
+        <tr>
+            <th scope="row">4</th>
+            <td>点击事件</td>
+            <td>
+                <click-event></click-event>
+            </td>
+        </tr>
         </tbody>
     </table>
 
