--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Angular 2 Demo App</title>
     <link rel="icon" href="images/favicon.ico"/>
     <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/css/bootstrap.css" rel="stylesheet">
+    <script src="//cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
     {% for (var css in o.htmlWebpackPlugin.files.css) { %}
     <link href=".{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
     {% } %}
