--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -36,6 +36,13 @@
                 <click-event></click-event>
             </td>
         </tr>
+        <tr>
+            <th scope="row">5</th>
+            <td>多组件</td>
+            <td>
+                <components-component></components-component>
+            </td>
+        </tr>
         </tbody>
     </table>
 
