--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -43,6 +43,13 @@
                 <components-component></components-component>
             </td>
         </tr>
+        <tr>
+            <th scope="row">6</th>
+            <td>host属性</td>
+            <td>
+                <host-property></host-property>
+            </td>
+        </tr>
         </tbody>
     </table>
 
