--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -24,9 +24,9 @@
         </tr>
         <tr>
             <th scope="row">3</th>
-            <td>循环</td>
+            <td>ng前缀的标签</td>
             <td>
-                <ng-for></ng-for>
+                <ng-tag></ng-tag>
             </td>
         </tr>
         <tr>
