--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -50,6 +50,13 @@
                 <host-property></host-property>
             </td>
         </tr>
+        <tr>
+            <th scope="row">7</th>
+            <td>验证表单</td>
+            <td>
+                <validate-form></validate-form>
+            </td>
+        </tr>
         </tbody>
     </table>
 
