--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -57,6 +57,13 @@
                 <validate-form></validate-form>
             </td>
         </tr>
+        <tr>
+            <th scope="row">8</th>
+            <td>http的服务</td>
+            <td>
+                <http-service></http-service>
+            </td>
+        </tr>
         </tbody>
     </table>
 
