--- a/src/ts/app.html
+++ b/src/ts/app.html
@@ -37,6 +37,20 @@
             </td>
         </tr>
         <tr>
+            <th scope="row">4</th>
+            <td>键盘事件(key-up和key-down一样的效果)</td>
+            <td>
+                <keyup-event></keyup-event>
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">4</th>
+            <td>键盘事件(enter和blur)</td>
+            <td>
+                <enter-blur-event></enter-blur-event>
+            </td>
+        </tr>
+        <tr>
             <th scope="row">5</th>
             <td>多组件</td>
             <td>
